argocd-test/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: nginx-demo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.demo.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
